fix: fixed the sidebar x-direction overflow problem and tweaked the chat doodles styling

--- a/src/index.css
+++ b/src/index.css
@@ -166,12 +166,13 @@
     .chat-doodle-bg {
         /* decresese the visibility of the patterns */
         background-image: linear-gradient(
-                rgba(0, 0, 0, 0.75),
-                rgba(0, 0, 0, 0.75)
+                rgba(0, 0, 0, 0.96),
+                rgba(0, 0, 0, 0.96)
             ),
             url(../public/whatsapp-chat-bg.png);
         background-attachment: fixed;
         background-repeat: repeat;
+        background-size: auto 170%;
     }
 }
 
